@@ -1,5 +1,11 @@
 2019-10-17  Andre Vieira  <andre.simoesdiasvieira@arm.com>
 
+	* tree-vect-loop.c (determine_peel_for_niter): New function contained
+	outlined code from ...
+	(vect_analyze_loop_2): ... here.
+
+2019-10-17  Andre Vieira  <andre.simoesdiasvieira@arm.com>
+
 	* tree-vect-loop.c (vect_transform_loop): Move code from here...
 	* tree-vect-loop-manip.c (vect_loop_versioning): ... to here.
 	* tree-vectorizer.h (vect_loop_versioning): Remove unused parameters.
